--- a/package.json
+++ b/package.json
@@ -1,8 +1,31 @@
 {
+  "name": "okbulk",
+  "version": "1.0.0",
+  "description": "OkBulk will buy and ship your orders in bulk, anything, anywhere anytime.",
+  "repository": "https://github.com/AmerAnsari/okbulk-home",
+  "license": "MIT",
   "scripts": {
-    "build": "index-md"
+    "serve": "gulp serve",
+    "build": "gulp build",
+    "clean": "gulp clean",
+    "lint": "eslint gulpfile.js src"
   },
   "devDependencies": {
-    "index.md": "^0.1.18"
+    "del": "^6.0.0",
+    "eslint": "^8.3.0",
+    "gulp": "^4.0.2",
+    "gulp-connect": "^5.7.0",
+    "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.0.0",
+    "gulp-uglify-es": "^3.0.0",
+    "merge-stream": "^2.0.0",
+    "sass": "^1.43.5"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.2.0",
+    "jquery": "^3.6.0"
   }
 }
